Read local config on start up
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@111843 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/views/devices_view.html
+++ b/local/views/devices_view.html
@@ -12,6 +12,7 @@
 <script src="/js/lights.js"></script>
 <script src="/js/switches.js"></script>
 <script src="/js/shutters.js"></script>
+<script src="/js/thermostats.js"></script>
 <script src="/js/categories.js"></script>
 <script src="/js/color-picker.js"></script>
 <script src="/js/jquery.ratelimit.js"></script>
