Add support for camera streaming on local server
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@113674 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/views/cam_view.html
+++ b/local/views/cam_view.html
@@ -6,12 +6,10 @@
 <script src="/js/jquery-1.11.1.min.js"></script>
 
 <script src="/js/common.js"></script>
-<script src="/js/cameras.js"></script>
+<script src="/js/security.js"></script>
 
 <p class="hidden" id="server_offline">Selected Home Server is not currently connected</p>
 
-<div class="hidden" id="block_cameras">
-
-<div class="clearer"></div>
-
+<div id="block_cameras">
+ 
 </div>
