Local camera view
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@113831 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/views/stream_view.html
+++ b/local/views/stream_view.html
@@ -4,8 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="icon" href="/favicon.png" type="image/png">
     <title>NHome - Camera stream</title>
+    <script id="socketio" src="/socket.io/socket.io.js"></script>
+    <script src="/js/jquery-1.11.1.min.js"></script>
+    <script src="/js/common.js"></script>
+    <script src="/js/stream.js"></script>
   </head>
   <body>
-    <img src="/stream-mjpeg/<%= cameraid %>" alt="Loading camera stream" />
+    <img id="camera" data-camera="<%= cameraid %>" alt="Loading camera stream" />
   </body>
 </html>
