--- a/local/views/stream_view.html
+++ b/local/views/stream_view.html
@@ -4,10 +4,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="icon" href="/favicon.png" type="image/png">
     <title>NHome - Camera stream</title>
-    <script id="socketio" src="/socket.io/socket.io.js"></script>
-    <script src="/js/jquery-1.11.1.min.js"></script>
-    <script src="/js/common.js"></script>
-    <script src="/js/stream.js"></script>
+    <script defer id="socketio" src="/socket.io/socket.io.js"></script>
+    <script defer src="/js/jquery-1.11.1.min.js"></script>
+    <script defer src="/js/common.js"></script>
+    <script defer src="/js/stream.js"></script>
   </head>
   <body>
     <img id="camera" data-camera="<%= cameraid %>" alt="Loading camera stream" />
