Update local mode templates
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@124967 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/views/devices_view.html
+++ b/local/views/devices_view.html
@@ -89,6 +89,10 @@
     </div>
 
     <div class="menuoption">
+        <input type="text" id="add_device_camera_desc" placeholder="Description" />
+    </div>
+
+    <div class="menuoption">
         <input type="text" id="add_device_camera_mjpeg" placeholder="MJPEG URL" />
     </div>
 
@@ -153,6 +157,32 @@
     </div>
 </div>
 
+<div class="block hidden edit_device renameable edit_shutter">
+    <div class="block_header">Edit shutter</div>
+
+    <div class="menuoption">
+        <input type="text" name="device_name" placeholder="Name" />
+    </div>
+
+    <div class="edit_device_navigation">
+        <button class="cancel">Cancel</button>
+        <button class="save">Save</button>
+    </div>
+</div>
+
+<div class="block hidden edit_device renameable edit_thermostat">
+    <div class="block_header">Edit thermostat</div>
+
+    <div class="menuoption">
+        <input type="text" name="device_name" placeholder="Name" />
+    </div>
+
+    <div class="edit_device_navigation">
+        <button class="cancel">Cancel</button>
+        <button class="save">Save</button>
+    </div>
+</div>
+
 <div class="block hidden edit_device edit_remote">
     <div class="block_header">Edit remote</div>
 
@@ -171,6 +201,10 @@
 
     <div class="menuoption">
         <input type="text" id="edit_device_camera_name" placeholder="Name" />
+    </div>
+
+    <div class="menuoption">
+        <input type="text" id="edit_device_camera_desc" placeholder="Description" />
     </div>
 
     <div class="menuoption">
