--- a/local/views/support_view.html
+++ b/local/views/support_view.html
@@ -12,8 +12,9 @@
             <li>Fibaro switches and sensors</li>
             <li>LIFX lights</li>
             <li>RaZberry switches</li>
-            <li>netatmo</li>
+            <li>netatmo weather and thermostats</li>
             <li>Nest</li>
+            <li>NHome bridge</li>
         </ul>
     </div>
 </div>
