Update nwjs file layout and terminal color
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@127913 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/nwjs/style.css
+++ b/nwjs/style.css
@@ -246,3 +246,11 @@ footer a {
 .H_wrap {
     flex-flow: row wrap;
 }
+
+#console {
+    display: block;
+    font-family: monospace;
+    height: 550px;
+    margin: 0px;
+}
+
