--- a/local/views/cam_view.html
+++ b/local/views/cam_view.html
@@ -6,6 +6,7 @@
 <script defer src="/js/jquery-1.11.1.min.js"></script>
 
 <script defer src="/js/common.js"></script>
+<script defer src="/js/jsmpg.js"></script>
 <script defer src="/js/security-local.js"></script>
 
 <p class="hidden" id="server_offline">Selected Home Server is not currently connected</p>
