--- a/local/views/cam_view.html
+++ b/local/views/cam_view.html
@@ -7,7 +7,7 @@
 
 <script defer src="/js/common.js"></script>
 <script defer src="/js/jsmpg.js"></script>
-<script defer src="/js/security-local.js"></script>
+<script defer src="/js/security.js"></script>
 
 <p class="hidden" id="server_offline">Selected Home Server is not currently connected</p>
 
