Update local mode interface
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@130976 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/css/style.css
+++ b/local/css/style.css
@@ -121,6 +121,7 @@ button:focus {
 .form-select {
   border-radius: 0.35em;
   height: 2.5em;
+  width: 100%;
   background: #21425E url(../img/button/chevron-down.png) 95% 50% no-repeat;
   border: 0.1em solid #446B8D;
   color: #fff;
