Update local mode design
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@131694 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/css/add-server.css
+++ b/local/css/add-server.css
@@ -142,5 +142,6 @@
   text-align: center;
   padding: 5em;
   background-color: rgba(29,131,228, 0.85);
-  animation: popUp 0.5s ease;
+  -webkit-animation: popUp 0.5s ease;
+          animation: popUp 0.5s ease;
 }
