--- a/local/css/frame.css
+++ b/local/css/frame.css
@@ -5,11 +5,12 @@
   background-color: #1362AC;
   position: relative;
 }
-.server-offline-msg{
+.server-offline-msg {
   position: absolute;
   left: 25%;
   top: 1em;
   color: #fff;
+  -webkit-animation: popUp 0.35s ease;
   animation: popUp 0.35s ease;
 }
 .frame-nav {
@@ -24,8 +25,7 @@
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  padding: 0 2%;
-  margin: 2% auto;
+  margin: 1em 2%;
 }
 .frame-menu-icon {
   cursor: pointer;
@@ -125,8 +125,78 @@
   font-weight: bold;
   width: 100%;
 }
+.user-dropdown-toggle-btn {
+  height: auto;
+  padding: 0.25em;
+  background-color: #1986D9;
+  width: 12em;
+  background-image: url(../img/button/chevron-down.png);
+  background-position: 90% 50%;
+  background-repeat: no-repeat;
+}
+.user-dropdown {
+  width: 12em;
+  background-color: #1986D9;
+}
+.user-dropdown > li {
+  height: 3em;
+  text-indent: 2em;
+  cursor: pointer;
+}
+.user-dropdown > li > a {
+  line-height: 3;
+  color: #fff;
+}
+.user-dropdown > li > a:hover {
+  background-color: rgba(255, 255, 255, 0.25);
+}
+.user-dropdown > li:nth-child(odd) {
+  background-color: #1881D1;
+}
+.alarms-btn {
+  background-image: url(../img/button/alarm-white.png);
+  background-position: 5% 50%;
+  background-repeat: no-repeat;
+}
+.account-settings-btn {
+  background-image: url(../img/button/account-settings.png);
+  background-position: 5% 50%;
+  background-repeat: no-repeat;
+}
+.logout-btn {
+  background-image: url(../img/button/logout-white.png);
+  background-position: 5% 50%;
+  background-repeat: no-repeat;
+}
+.user-info {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+.user-avatar {
+  border: 0.1em solid rgba(255, 255, 255, 0.5);
+  ;
+  height: 3em;
+  width: 3em;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+  margin: auto 1em auto 0;
+}
+.user-details {
+  text-align: left;
+}
 .frame-logout-btn {
-  background-color: rgba(17,89,157,0.5);
+  background-color: rgba(17, 89, 157, 0.5);
   color: #fff;
   padding: 0;
   background-image: url(../img/button/logout.png);
@@ -145,11 +215,14 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  max-height: calc(100vh - 8.5em);
+  height: calc(100% - 3em - 4%);
+  position: relative;
+  overflow: hidden;
 }
 .frame-sidebar {
   position: relative;
   width: 25em;
+  height: 100%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -161,11 +234,6 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-}
-.server-dropdown {
-  width: 100%;
-  margin: 1em auto;
-  padding: 0 0.5em;
 }
 .active-server-btn {
   display: -webkit-box;
@@ -187,28 +255,51 @@
 .active-server-btn a {
   color: #fff;
 }
-.server-status-online{
+.server-status-online {
   background-image: url(../img/frame/green-dot.png);
   background-position: 95% 50%;
   background-repeat: no-repeat;
 }
-.server-status-offline{
+.server-status-offline {
   background-image: url(../img/frame/red-dot.png);
   background-position: 95% 50%;
   background-repeat: no-repeat;
 }
+
 /* bootstrap css override */
 
-.dropdown-menu {
+.server-dropdown {
+margin: 1em auto;
   left: auto;
   width: 95%;
   background-color: #21384B;
 }
-.dropdown-menu>li>a:hover {
+.server-dropdown-ul{
+  width: 100%;
+  background-color: #21384B;
+}
+.server-dropdown-ul>li>a:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
-.dropdown-menu>li>a {
+.server-dropdown-ul>li>a {
   color: #fff;
+}
+.downloads-panel-group {
+  background-color: #0C253A;
+}
+.downloads-panel {
+  background-color: #193954;
+  border: none;
+}
+.downloads-panel-heading {
+  background-color: #0D1E2E !important;
+  cursor: pointer;
+  text-indent: 5em;
+  color: #fff !important;
+  height: 4em;
+}
+.downloads-panel-heading.collapsed {
+  background-color: #0B1E2F;
 }
 
 /* bootstrap end */
@@ -218,6 +309,8 @@
   height: 4em;
   line-height: 4;
   background-color: #122C42;
+  background-position: 5% 50%;
+  background-repeat: no-repeat;
   margin: 0.1em 0;
   color: #fff;
   text-align: left;
@@ -229,34 +322,72 @@
   background-color: inherit;
   color: #fff;
 }
-.server-settings-btn {
-  background-image: url(../img/button/server-settings.png);
-  background-position: 5% 50%;
-  background-repeat: no-repeat;
+.devices-btn {
+  text-indent: 5em;
+  background-image: url(../img/filter-icon/devices.png);
+  background-size: 3em;
 }
-.account-settings-btn {
-  background-image: url(../img/button/account-settings.png);
-  background-position: 5% 50%;
-  background-repeat: no-repeat;
+.devices-btn-active, .devices-btn:hover {
+  background-color: #1BA1DF;
+  background-size: 10em;
+  text-indent: 15em;
+  -webkit-transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
+  transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
+}
+.scenes-btn {
+  text-indent: 5em;
+  background-image: url(../img/filter-icon/scenes.png);
+  background-size: 3em;
+}
+.scenes-btn-active, .scenes-btn:hover {
+  background-color: #EC3535;
+  background-size: 10em;
+  text-indent: 15em;
+  -webkit-transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
+  transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
+}
+.schedule-btn {
+  text-indent: 5em;
+  background-image: url(../img/filter-icon/schedule.png);
+  background-size: 3em;
+}
+.schedule-btn-active, .schedule-btn:hover {
+  background-color: #12C9C6;
+  background-size: 10em;
+  text-indent: 15em;
+  -webkit-transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
+  transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
+}
+.security-btn {
+  text-indent: 5em;
+  background-image: url(../img/filter-icon/security.png);
+  background-size: 3em;
+}
+.security-btn-active, .security-btn:hover {
+  background-color: #E9A737;
+  background-size: 10em;
+  text-indent: 15em;
+  -webkit-transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
+  transition: text-indent 0.4s ease, background-color 0.25s ease 0.2s, background-size 0.5s ease 0.2s;
 }
 .downloads-btn {
-  background-image: url(../img/button/downloads.png);
-  background-position: 5% 50%;
-  background-repeat: no-repeat;
+  background-image: url(../img/button/download-white.png);
 }
 .activity-log-btn {
   background-image: url(../img/button/activity-log.png);
-  background-position: 5% 50%;
-  background-repeat: no-repeat;
   cursor: auto;
 }
 .activity-log-btn:hover {
   background-color: #122C42;
 }
 .sidebar-activity-log {
-  background-color: #122C42;
+  /*background-color: #122C42;*/
   color: #949EAC;
   overflow: auto;
+  max-height: 40em;
+}
+.sidebar-activity-log > img{
+  padding: 5em;
 }
 .sidebar-activity-log ul {
   list-style: none;
@@ -364,7 +495,7 @@
   font-size: 0.8em;
   color: #586676
 }
-.settings-view {
+.downloads-menu {
   position: absolute;
   right: 0;
   top: 0;
@@ -403,10 +534,10 @@
   width: 100%;
 }
 .frame-info {
-  background-color: #1B3449;
-  height: 10em;
-}
-.category-wrap {
+  min-height: 5em;
+  border-bottom: 0.1em solid rgba(255, 255, 255, 0.25);
+  ;
+  padding: 1em;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -416,6 +547,8 @@
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
+
+/*
 .category-holder {
   display: inherit;
 }
@@ -438,7 +571,7 @@
   color: #67859E;
   padding: 1em;
 }
-.category > img{
+.category > img {
   position: absolute;
   top: 0.25em;
   right: 0.25em;
@@ -450,7 +583,8 @@
 .category-active > a {
   color: #fff;
   font-weight: bold;
-}
+}*/
+
 .add-category-btn {
   background: rgba(255, 255, 255, 0.1) url(../img/button/add-room.png) 50% 50% no-repeat;
   height: 2.5em;
@@ -463,22 +597,43 @@
   height: 2.5em;
   padding: 0.25em;
   padding-right: 0;
-  margin-top: 0.5em;
+  margin: 1em;
   overflow: hidden;
-    display: flex;
-    align-items: center;
-    animation: expandAddCategory 0.35s ease;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-animation: expandAddCategory 0.35s ease;
+  animation: expandAddCategory 0.35s ease;
 }
-@keyframes expandAddCategory{
-  0%{
+@-webkit-keyframes expandAddCategory {
+  0% {
     width: 0em;
   }
-    100%{
-      width: 18.5em;
-    }
+  100% {
+    width: 18.5em;
+  }
 }
-.add-category-wrap form{
+@keyframes expandAddCategory {
+  0% {
+    width: 0em;
+  }
+  100% {
+    width: 18.5em;
+  }
+}
+.add-category-wrap form {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
   height: 3em;
 }
@@ -491,7 +646,7 @@
   padding: 0 1em;
   text-align: left;
 }
-.add-category-submit-btn p{
+.add-category-submit-btn p {
   line-height: 3;
   margin-right: 0.75em;
 }
@@ -508,49 +663,21 @@
   width: 2.5em;
   border: 0;
 }
-.info-wrap {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  color: #fff;
-}
-.user-info {
-  display: inherit;
-  margin-left: 2em;
-}
-.user-avatar {
-  border: 0.1em solid rgba(255, 255, 255, 0.5);
-  ;
-  height: 4em;
-  width: 4em;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  border-radius: 50%;
-  margin: 0 auto;
-}
-.user-details {
-  text-align: left;
-  text-indent: 1em;
-}
 .sensor-wrap {
   display: inherit;
+  align-items: center;
 }
 .info-sensor {
   position: relative;
-  height: 100%;
   display: inherit;
   max-width: 10em;
-  margin:0 1em;
+  margin: 0 1em;
+  color: #fff;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  -webkit-animation: popUp 0.5s ease;
   animation: popUp 0.5s ease;
 }
 .info-sensor > img {
@@ -576,21 +703,35 @@
   word-break: break-all;
   word-wrap: break-word;
 }
-.alarm-wrap {
-  margin-right: 2em;
+.category-dropdown-wrap {
+  margin: auto 0;
+}
+.category-dropdown {
+  height: 3em;
+  line-height: 3;
+  background: rgba(255, 255, 255, 0.35) url(../img/button/chevron-down.png) 95% 50% no-repeat;
+  min-width: 11em;
+  border-radius: 0.35em !important;
+  text-indent: -2.5em;
+}
+.category-dropdown-list{
+  background-color: rgba(255, 255, 255, 0.75);
+  color: #fff;
 }
 .frame-view {
   position: relative;
   margin-top: 1em;
   padding: 0 1em;
-  height: calc(100vh - 25em);
-  overflow: auto;
+  height: calc(100vh - 20em);
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .frame-nav-bottom {
   position: absolute;
   bottom: 0;
   background-color: #1B3449;
-  min-height: 5em;
+  border-top: 0.2em solid #264A69;
+  height: 4em;
   width: 100%;
   display: -webkit-box;
   display: -webkit-flex;
@@ -599,70 +740,33 @@
   -webkit-flex-flow: row nowrap;
   -ms-flex-flow: row nowrap;
   flex-flow: row nowrap;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
-.nav-bottom-btn {
-  width: 4em;
+.filter-btn {
+  min-width: 8m;
   height: 4em;
-  border-radius: 0.85em;
-  background-color: transparent;
-  background-size: 4em !important;
+  line-height: 4;
+  border-radius: 0;
+  background-color: inherit;
+  background-position: 10% 50%;
   background-repeat: no-repeat;
-  background-position: center;
-  margin: 0.5em;
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease;
+  text-indent: 3em;
 }
-.devices-filter-btn {
-  background-image: url(../img/filter-icon/devices.png);
+.all-rooms-filter-btn {
+  background-image: url(../img/button/list.png);
 }
-.devices-filter-btn-active, .devices-filter-btn:hover {
-  background-color: #1BA1DF;
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
-  -webkit-transition: -webkit-transform 0.25s ease, background-color 0.25s ease 0.2s;
-  transition: transform 0.25s ease, background-color 0.25s ease 0.2s;
+.most-used-filter-btn {
+  background-image: url(../img/button/most-used.png);
 }
-.scenes-filter-btn {
-  background-image: url(../img/filter-icon/scenes.png);
+.favorite-filter-btn {
+  background-image: url(../img/button/favorite.png);
 }
-.scenes-filter-btn-active, .scenes-filter-btn:hover {
-  background-color: #EC3535;
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
-  -webkit-transition: -webkit-transform 0.25s ease, background-color 0.25s ease 0.2s;
-  transition: transform 0.25s ease, background-color 0.25s ease 0.2s;
+.recently-used-filter-btn {
+  background-image: url(../img/button/recently.png);
 }
-.schedule-filter-btn {
-  background-image: url(../img/filter-icon/schedule.png);
-}
-.schedule-filter-btn-active, .schedule-filter-btn:hover {
-  background-color: #12C9C6;
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
-  -webkit-transition: -webkit-transform 0.25s ease, background-color 0.25s ease 0.2s;
-  transition: transform 0.25s ease, background-color 0.25s ease 0.2s;
-}
-.security-filter-btn {
-  background-image: url(../img/filter-icon/security.png);
-}
-.security-filter-btn-active, .security-filter-btn:hover {
-  background-color: #E9A737;
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
-  -webkit-transition: -webkit-transform 0.25s ease, background-color 0.25s ease 0.2s;
-  transition: transform 0.25s ease, background-color 0.25s ease 0.2s;
-}
-.inflater {
-  width: 4em;
-  height: 4em;
-  margin: 0.5em auto;
-  cursor: pointer;
+.settings-btn {
+  background-image: url(../img/button/cog.png);
 }
