--- a/local/css/devices.css
+++ b/local/css/devices.css
@@ -28,8 +28,23 @@
   border-radius: 0.5em;
   overflow: hidden;
   color: #fff;
+  z-index: 10;
   -webkit-transition: all 0.5s ease;
           transition: all 0.5s ease;
+}
+#add-to-favorites ~ label{
+  width: 1em;
+  height: 1em;
+  margin: 0;
+  cursor: pointer;
+  background: transparent url(../img/button/favorite-hollow.png) 50% no-repeat;
+}
+#add-to-favorites:checked ~ label{
+  width: 1em;
+  height: 1em;
+  background: transparent url(../img/button/favorite-white.png) 50% no-repeat;
+  box-shadow: none;
+  animation: popUp 0.5s ease;
 }
 .edit-device-rename {
   position: relative;
