--- a/local/css/style.css
+++ b/local/css/style.css
@@ -222,6 +222,7 @@ input[type="radio"]:checked ~ label{
   color: #3E6484;
 }
 .template-nav {
+  position: relative;
   width: 100%;
   height: 4em;
   color: #fff;
@@ -290,4 +291,11 @@ width: 100%;
 }
 .justify-end{
   justify-content: flex-end;
+}
+.horizontal-line{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 5em;
+  border-bottom: 0.1em solid rgba(255, 255, 255, 0.5);
 }
